# svix-webhooks

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .justfile  .justfile-common-rust  .pre-commit-config.yaml  .taplo.toml  .typos.toml  .version  .yamlfmt.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Dockerfile  LICENSE  OpenTelemetry.md  README.md  README_LIBS.md  SECURITY.md  codegen.toml  composer.json  cost.md  deny.toml  deploy.md  dist-workspace.toml  go.mod  go.sum  justfile  lib-openapi.json  openapi.json  openapitools.json  package-lock.json  package.json  phpunit.xml  plan.md  pyproject.toml  regen_openapi.py  (+3 more)
bridge/: .justfile  Cargo.toml  ChangeLog.md  Dockerfile  README.md  run-idle-test.sh  run-tests.sh  svix-bridge.example.receivers.yaml  svix-bridge.example.senders.yaml  testing-docker-compose.yml
bridge/.config/: nextest.toml
bridge/generic-queue/: Cargo.toml
bridge/generic-queue/src/: gcp_pubsub.rs  lib.rs  memory_queue.rs  rabbitmq.rs  redis.rs  sqs.rs
bridge/scripts/: check-deps.sh
bridge/svix-bridge/: Cargo.toml
bridge/svix-bridge-plugin-kafka/: Cargo.toml  LICENSE
bridge/svix-bridge-plugin-kafka/src/: config.rs  error.rs  input.rs  lib.rs  output.rs
bridge/svix-bridge-plugin-queue/: Cargo.toml  LICENSE
bridge/svix-bridge-plugin-queue/src/: config.rs  error.rs  lib.rs
bridge/svix-bridge-plugin-queue/tests/: gcp_pubsub_consumer.rs  rabbitmq_consumer.rs  redis_stream_consumer.rs  sqs_consumer.rs
bridge/svix-bridge-types/: Cargo.toml
bridge/svix-bridge-types/src/: lib.rs
bridge/svix-bridge/src/: allocator.rs  http_output.rs  main.rs  metrics.rs
python/: .editorconfig  .flake8  .gitignore  .openapi-generator-ignore  README.md  example.py  mypy.ini  openapi-generator-config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/diahook/: .gitignore  __init__.py  api.py  receiver.py
python/requirements.in/: development.txt
python/scripts/: format.sh  generate_openapi.sh  lint.sh
python/svix/: __init__.py  api.py  autoconfig.py  autoconfig_consumer.py  exceptions.py  receiver.py  webhooks.py
python/svix/api/: .codegen.json  __init__.py  application.py  authentication.py  background_task.py  client.py  codegen.json  common.py  connector.py  endpoint.py  endpoint_transformation.py  environment.py  event_type.py  events_public.py  health.py  http_error.py  ingest.py  ingest_authentication.py  ingest_endpoint.py  ingest_endpoint_transformation.py  ingest_source.py  integration.py  management.py  management_authentication.py  message.py  message_attempt.py  message_poller.py  operational_webhook.py  operational_webhook_endpoint.py  statistics.py  stream.py  stream_event_type.py  stream_events.py  stream_sink.py  stream_stream.py  streaming.py  streaming_event_type.py  streaming_events.py  streaming_sink.py  streaming_sink_transformation.py  (+2 more)
python/svix/api_internal/: common.py  endpoint.py  endpoint_auto_config.py  message.py  message_pollerv2.py
python/svix/internal/: README.md  pyproject.toml
python/svix/models/: .codegen.json  __init__.py  adobe_sign_config.py  adobe_sign_config_out.py  aggregate_event_types_out.py  airwallex_config.py  airwallex_config_out.py  amazon_s3_patch_config.py  api_token_censored_out.py  api_token_expire_in.py  api_token_in.py  api_token_out.py  app_portal_access_in.py  app_portal_access_out.py  (+251 more)
python/templates/: api_client.mustache  api_resource.py.jinja  api_summary.py.jinja  client.py.jinja  component_type.py.jinja  component_type_summary.py.jinja  endpoint_macros.py.jinja  endpoint_module.py.jinja  model.py.jinja  types.py.jinja
python/tests/: conftest.py  docker-compose.override.yml  test_autoconfig.py  test_client.py  test_httpretty.py  test_kitchen_sink.py  test_openapi.py  test_receiver.py  test_trailing_slash.py  test_webhooks.py
python/whsaas/: __init__.py  receiver.py
rust/: .clippy.toml  .gitignore  .openapi-generator-ignore  .rustfmt.toml  Cargo.toml  README.md  openapi-generator-config.json
rust/src/: api.rs  autoconfig.rs  autoconfig_consumer.rs  connector.rs  error.rs  lib.rs  model_ext.rs  request.rs  webhooks.rs
rust/templates/: api_resource.rs.jinja  api_summary.rs.jinja  component_type.rs.jinja  component_type_summary.rs.jinja  model.mustache  model_mod.mustache
rust/tests/: kitchen_sink.rs  trailing_slash_test.rs
server/: .clippy.toml  .dockerignore  .gitignore  .justfile  .rustfmt.toml  Cargo.toml  ChangeLog.md  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.base.yml  docker-compose.docker-image.yml  docker-compose.override.yml  docker-compose.testing.yml  docker-compose.yml  generate-openapi.sh  openapi.json  run-tests-with-grcov.sh  run-tests.sh  testing-docker-compose.yml  testing-queue.conf  wait-for
server/.config/: nextest.toml
server/rabbit/: enabled_plugins
server/scripts/: launch-svix-server
server/svix-server/: .gitignore  Cargo.toml  config.default.toml  config.example.toml  description.md  development.env
server/svix-server-derive/: Cargo.toml
server/svix-server_derive/: Cargo.toml
server/svix_test_suite/: Cargo.toml
svix-cli/: .dockerignore  .justfile  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  dist-workspace.toml
svix-cli/src/: config.rs  json.rs  main.rs
svix-cli/templates/: api_resource.rs.jinja
svix-cli/wix/: main.wxs
webhook-bridge/: Cargo.toml  Dockerfile  README.md  run-tests.sh  svix-agent.example.yaml  svix-webhook-bridge.example.yaml  testing-docker-compose.yml
webhook-bridge/generic-queue/: Cargo.toml
webhook-bridge/svix-agent/: Cargo.toml
webhook-bridge/svix-agent-plugin-generic/: Cargo.toml
webhook-bridge/svix-agent-plugin-webhook-receiver/: Cargo.toml
webhook-bridge/svix-agent-types/: Cargo.toml
webhook-bridge/svix-webhook-bridge/: Cargo.toml
webhook-bridge/svix-webhook-bridge-plugin-queue/: Cargo.toml
webhook-bridge/svix-webhook-bridge-plugin-queue-consumer/: Cargo.toml
webhook-bridge/svix-webhook-bridge-plugin-webhook-receiver/: Cargo.toml
webhook-bridge/svix-webhook-bridge-types/: Cargo.toml
(+5220 files in other folders)
