[package]
name = "coyote"
version = "0.1.0"
rust-version = "1.91"
edition = "2024"

[features]
# openssl-sys keeps showing up in the CLI dep graph, breaking the build, even when
# `default-features = false`.
# Switching the default to rustls properly culls it from the tree.
default = ["http1", "rustls-tls"]

http1 = ["hyper-util/http1", "hyper-rustls?/http1"]
http2 = ["hyper-util/http2", "hyper-rustls?/http2"]
native-tls = ["dep:hyper-tls"]
rustls-tls = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/rustls-native-certs"]

[dependencies]
form_urlencoded = "1.2.2"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.8.1"
hyper-rustls = { version = "0.27.7", optional = true }
hyper-tls = { version = "0.6.0", optional = true }
hyper-util = "0.1.19"
jiff = { version = "0.2.18", features = ["serde"] }
percent-encoding = "2.3.2"
rand = "0.9.2"
rmp-serde = "1.3.1"
rustls = { version = "0.23.31", optional = true }
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = { version = "1.0.74", features = ["preserve_order", "raw_value"] }
tokio = { version = "1.24.2", features = ["rt", "signal", "fs"] }
tower-service = "0.3.3"
tracing = "0.1.35"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros"] }
