[package]
name = "svix"
version = "1.24.0"
authors = ["Svix Inc. <oss@svix.com>"]
edition = "2021"
description = "Svix webhooks API client and webhook verification library"
homepage = "https://www.svix.com"
repository = "https://github.com/svix/svix-webhooks"
readme = "../README.md"
license = "MIT"
keywords = ["svix", "webhooks", "diahook"]
categories = ["development-tools", "asynchronous", "network-programming", "web-programming"]

[features]
default = ["http1", "native-tls"]

http1 = ["hyper-util/http1", "hyper-rustls?/http1"]
http2 = ["hyper-util/http2", "hyper-rustls?/http2"]
native-tls = ["dep:hyper-tls"]
rustls-tls = ["dep:hyper-rustls", "hyper-rustls?/rustls-native-certs"]
svix_beta = []

[dependencies]
base64 = "0.13"
hmac-sha256 = "1"
http02 = { package = "http", version = "0.2.0" }
http1 = { package = "http", version = "1.0.0" }
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-rustls = { version = "0.26.0", optional = true }
hyper-tls = { version = "0.6.0", optional = true }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "tokio"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0.30"
time = "0.3"
url = "2.2"
tokio = { version = "1.36.0", features = ["time"] }

[package.metadata.cargo-public-api-crates]
allowed = [
    "http",
    "serde",
    "serde_json",
    # Used in WebhookError, breaking change to remove from public API.
    "base64",
]
