[workspace]
members = ["svix-server", "svix-server_derive"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
todo = "warn"
uninlined_format_args = "warn"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.66.0"

[profile.dev]
# optimize host dependencies for faster rebuilds.
# slows down compilation of those dependencies, but they'll not be compiled
# nearly as often as workspace crates in local development.
build-override.opt-level = 2

[profile.dev.package]
# not worth optimizing, much more likely to change than other host deps
# and not cached in CI.
svix-server_derive = { opt-level = 0 }

[patch.crates-io]
hyper = { git = "https://github.com/svix/hyper/", rev = "63efac5a6719937359d61a1bb1b93d9ce88f0e3d" }
