[workspace]
members = ["svix-server", "svix-server_derive"]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
todo = "warn"
uninlined_format_args = "warn"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.75.0"

[profile.dev]
# optimize host dependencies for faster rebuilds.
# slows down compilation of those dependencies, but they'll not be compiled
# nearly as often as workspace crates in local development.
build-override.opt-level = 2

[profile.dev.package]
# not worth optimizing, much more likely to change than other host deps
# and not cached in CI.
svix-server_derive = { opt-level = 0 }

[patch.crates-io]
hyper = { git = "https://github.com/svix/hyper.git", rev = "18c04c321e1a9a4958ad14b880f7403acbe1c914" }
