[package]
name = "svix-cli"
description = "A CLI to interact with the Svix API."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "svix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
colored_json = "5.0.0"
concolor-clap = "0.1.0"
dialoguer = "0.11.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.31"
http = "1.2.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
svix = "1.44.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = ["native-tls"] }
toml = "0.8.19"
url = "2.5.4"
