[package]
name = "svix-cli"
description = "A CLI to interact with the Svix API."
version = "1.46.0"
edition = "2021"
license = "MIT"
keywords = ["svix", "webhooks", "diahook"]
categories = ["development-tools", "asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/svix-onelson/svix-webhooks"
authors = ["Svix Inc. <oss@svix.com>"]
publish = false

[package.metadata.wix]
upgrade-guid = "E6EF2AC4-2BA1-4E36-BDD5-FEE972946181"
path-guid = "09E262C8-4654-4160-A6A9-C03E92D3E575"
license = false
eula = false

[package.metadata.dist]
dist = true

[[bin]]
name = "svix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
colored_json = "5.0.0"
concolor-clap = "0.1.0"
dialoguer = "0.11.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.31"
home = "0.5.11"
http = "1.2.0"
# Reduce compile times for idna (we don't need the fastest possible impl of UTS 46)
# As per https://github.com/hsivonen/idna_adapter?tab=readme-ov-file#opting-to-use-unicode-rs
idna_adapter = "=1.1.0"
indoc = "2.0.5"
open = "5.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["rustls-tls", "charset", "http2", "macos-system-configuration"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
svix = { path = "../rust" }
tokio = { version = "1.42.0", features = ["macros", "time", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.8.19"
url = "2.5.4"
