[package]
name = "svix-bridge-plugin-kafka"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl", "tracing"] }
serde.workspace = true
serde_json.workspace = true
svix-bridge-types.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
ctor = "0.2.8"
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
