[package]
name = "svix-bridge-plugin-kafka"
version.workspace = true
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl", "tracing"] }
serde.workspace = true
serde_json.workspace = true
svix-bridge-types.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
ctor = "0.5.0"
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
