[package]
name = "svix-bridge-plugin-kafka"
version.workspace = true
edition = "2024"
rust-version = "1.91"
publish = false
license.workspace = true

[dependencies]
base64 = "0.22.1"
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl", "tracing"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
svix-bridge-types.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
ctor = "0.5.0"
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
