[package]
name = "svix-bridge-plugin-queue"
version.workspace = true
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
svix-bridge-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
tracing = "0.1"

[dependencies.omniqueue]
git = "https://github.com/svix/omniqueue-rs"
rev = "e7e328a576f921ca58d0bdb56b8df69fd996172d"
default-features = false
features = ["gcp_pubsub", "rabbitmq", "redis", "sqs"]

[dev-dependencies]
aws-config = "1.1.5"
aws-sdk-sqs = "1.13.0"
fastrand = "2.0.1"
gcloud-googleapis = "1.2.0"
gcloud-pubsub = "1.3.0"
lapin = "2.5.4"
redis = { version = "0.32.4", features = ["tokio-comp", "streams"] }
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
