[package]
name = "svix-bridge-plugin-queue"
version.workspace = true
edition = "2021"
rust-version = "1.91"
publish = false
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
svix-bridge-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-executor-trait = "3.1"
tokio-reactor-trait = "4.1"
tracing.workspace = true

[dependencies.omniqueue]
git = "https://github.com/svix/omniqueue-rs"
rev = "cd5d3995d104da36f952c2770b50535450514f92"
default-features = false
features = ["gcp_pubsub", "rabbitmq", "redis", "sqs"]

[dev-dependencies]
aws-config = "1.8.12"
aws-sdk-sqs = { version = "1.97.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
fastrand = "2.0.1"
gcloud-googleapis = "1.2.0"
gcloud-pubsub = "1.3.0"
lapin = "3.7.2"
redis = { version = "0.32.4", features = ["tokio-comp", "streams"] }
tracing-subscriber.workspace = true
wiremock.workspace = true

[lints]
workspace = true
