[package]
name = "svix-bridge-types"
version.workspace = true
edition = "2021"
rust-version = "1.91"
publish = false
license.workspace = true

[dependencies]
async-trait = "0.1"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
svix = { path = "../../rust", features = ["svix_beta"] }

[lints]
workspace = true
