[package]
name = "svix-bridge"
version.workspace = true
edition = "2024"
rust-version = "1.91"
publish = false
license.workspace = true

[features]
default = ["kafka", "jemalloc"]
kafka = ["dep:svix-bridge-plugin-kafka"]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { version = "0.6.0", optional = true, features = ["use_std", "stats"] }
tikv-jemallocator = { version = "0.6.0", optional = true }

[dependencies]
anyhow = "1"
axum = { version = "0.7.7", features = ["macros"] }
clap = { version = "4.2.4", features = ["env", "derive"] }
deadpool = { version = "0.12.1", features = ["unmanaged", "rt_tokio_1"] }
deno_ast = "0.53.0"
deno_core = "0.352.1"
enum_dispatch = "0.3"
indexmap = { version = "2.10.0", features = ["serde"] }
itertools = "0.14.0"
once_cell = "1.18.0"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest = { version = "0.13.4", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
shellexpand = { version = "3.1.0", default-features = false, features = ["base-0"] }
svix-bridge-plugin-kafka = { optional = true, path = "../svix-bridge-plugin-kafka" }
svix-bridge-plugin-queue = { path = "../svix-bridge-plugin-queue" }
svix-bridge-types.workspace = true
svix-ksuid = "0.8.0"
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
url = "2.5.4"

[dev-dependencies]
chrono = "0.4"
tower = "0.5.1"

[lints]
workspace = true
