[package]
name = "svix-server"
version = "1.24.0"
license = "MIT"
description = "Svix webhooks server"

authors = ["Svix Inc. <oss@svix.com>"]
homepage = "https://www.svix.com"
repository = "https://github.com/svix/svix-webhooks"
readme = "../README.md"
edition = "2021"
publish = false

[dependencies]
svix-server_derive = { path = "../svix-server_derive" }

svix = "1.17.0"
svix-ksuid = "^0.5.1"
dotenvy = "0.15.7"
hmac-sha256 = "1"
clap = { version = "4.1.8", features = ["derive"] }
axum = { version = "0.6.1", features = ["headers"] }
base64 = "0.13.0"
hyper = { version = "=0.14.28", features = ["full"] }
hyper-openssl = "0.9.2"
openssl = "0.10.60"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.4.4", features = ["trace", "cors", "normalize-path", "request-id"] }
serde = { version = "1.0.184", features = ["derive"] }
serde_json = { version = "1.0.74", features = ["arbitrary_precision", "raw_value"] }
serde_path_to_error = "0.1.7"
num_enum = "0.7.2"
enum_dispatch = "0.3.8"
regex = "1.5.5"
once_cell = "1.18.0"
figment = { version = "0.10", features = ["toml", "env", "test"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "0.15.0" }
validator = { version = "0.16.0", features = ["derive"] }
jwt-simple = "0.11.6"
ed25519-compact = "2.1.1"
chrono = { version="0.4.26", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "hickory-resolver"], default-features = false }
bb8 = "0.8"
bb8-redis = "0.14.0"
redis = { version = "0.24.0", features = ["tokio-comp", "tokio-native-tls-comp", "streams", "cluster-async"] }
thiserror = "1.0.30"
bytes = "1.1.0"
blake2 = "0.10.4"
chacha20poly1305 = "0.10.1"
# sea orm
sea-orm = { version = "0.12.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json" ], default-features = false }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "migrate" ] }
http = "0.2"
time = { version = "0.3.9", features = [ "std" ]}
futures = "0.3"
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"
jsonschema = "0.17.1"
aide = { version = "0.12.0", features = ["axum", "redoc", "macros", "axum-headers"] }
schemars = { version = "0.8.11", features = ["chrono", "url", "preserve_order"] }
indexmap = "1.9.2"
hickory-resolver = "0.24.0"
ipnet = { version = "2.5", features = ["serde"] }
urlencoding = "2.1.2"
form_urlencoded = "1.1.0"
lapin = "2.1.1"
sentry = { version = "0.32.2", features = ["tracing"] }
omniqueue = { git = "https://github.com/svix/omniqueue-rs", rev = "5ae22000e2ea214ba707cac81657f098e5785a76", default-features = false, features = ["in_memory", "rabbitmq-with-message-ids", "redis_cluster"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
anyhow = "1.0.56"
assert_matches = "1.5.0"
# NOTE: Purposely not the latest version such as not to mess up the `hyper` fork patch
axum-server = { version = "0.5", features = ["tls-openssl"] }
ctor = "0.2.7"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[lints]
workspace = true
